[project]
name = "truthbrush"
version = "0.1.9"
description = "API client for Truth Social"
authors = [{ name = "R. Miles McCain", email = "github@sendmiles.email" }]
requires-python = "~=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "click>=8.1.0,<9",
    "loguru>=0.7.0,<0.8",
    "python-dotenv>=1.0.1,<2",
    "python-dateutil==2.9.0",
    "curl_cffi>=0.7.0,<0.8",
]

[project.scripts]
truthbrush = "truthbrush.cli:cli"

[dependency-groups]
dev = [
    "black>=24.3.0,<25",
    "pytest>=7.0.1,<8",
    "pylint>=2.12.2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
